# perloxidice-openssl

./: Cargo.toml  README.md
elffy/: Cargo.toml
elffy/src/: main.rs
injection-shenanigans/: README.md
injection-shenanigans/ffi-record-openssl-sys/: Cargo.toml
injection-shenanigans/test-record-1/: Cargo.toml
injection-shenanigans/test-record-1/src/: main.rs
openssl-llvm-ir/: Cargo.toml
openssl-llvm-ir/src/: main.rs
