[package]
name = "ffi-record-openssl-sys"
version = "0.1.0"
edition = "2021"

[features]
default = []
unstable_boringssl = []
vendored = []

[build-dependencies]
bindgen = { version = "0.65.0", optional = true, features = ["experimental"] }
cc = "1.0.61"
openssl-src = { version = "300.1.2", optional = true, features = ["legacy"] }
pkg-config = "0.3.9"
vcpkg = "0.2.8"

[dependencies]
record-ffi = { package = "openssl-sys", version = "0.9.100", path = "../rust-openssl/openssl-sys" }